Closed Bug 1557424 Opened 5 years ago Closed 5 years ago

Scroll position jumps out-of-range on IRCCloud, take 2

Categories

(Core :: Panning and Zooming, defect)

defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- unaffected
firefox68 --- verified
firefox69 --- verified

People

(Reporter: mstange, Assigned: botond)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

There's a part of bug 1551582 that's still happening even after that bug got fixed.

Steps to reproduce:

  1. Go to irccloud.mozilla.com and log in with your mozilla LDAP credentials.
  2. Go to a channel which has at least one or two pages of unread scrollback.
  3. Scroll to the very bottom. There should be a bar at the top that says "[some time span] of unread messages".
  4. Press the Esc key.

Expected results:
The bar at the top should disappear and the scrolled contents should remain in the same place.

Actual results:
The bar at the top disappears, but the scrolled contents jump up by the size of the bar. There is blank space at the bottom.

Scrolling resets this odd state back to the normal state; scrolling even very slightly makes the gap disappear instantly.

I'm assuming that this bug was caused by bug 1549625, just like bug 1551582 was, but I haven't verified this.

Assignee: nobody → botond

This is similar to bug 1551582, but concerns a main-thread change to the
composition bounds rather than the scrollable rect; either can result in
the scroll range shrinking and therefore a need to re-clamp the scroll offset.

Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6e62e4cad2b1
Re-clamp the scroll offset if the composition bounds changes. r=kats
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

I can confirm this is fixed in today's Nightly. Thanks!

Comment on attachment 9070656 [details]
Bug 1557424 - Re-clamp the scroll offset if the composition bounds changes. r=kats

Beta/Release Uplift Approval Request

  • User impact if declined: On some page structures (such as IRCCloud), an action that resizes the scroll port of a scrollable element (for example, dismissing a notification bar that took up space at the top) can result in an out-of-bounds scroll position followed by a jump on the next scroll.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Similar to bug 1551582, the fix is small and enforces an invariant that should always hold.
  • String changes made/needed:
Attachment #9070656 - Flags: approval-mozilla-beta?

Comment on attachment 9070656 [details]
Bug 1557424 - Re-clamp the scroll offset if the composition bounds changes. r=kats

scrolling fix for 68.0b10

Attachment #9070656 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Hi, This issue is verified as fixed in Beta 68.0b10 a well as Nightly 69.0a1 (2019-06-13) .

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: