Bug 1557424 - Re-clamp the scroll offset if the composition bounds changes. r=kats a=jcristau

This is similar to bug 1551582, but concerns a main-thread change to the
composition bounds rather than the scrollable rect; either can result in
the scroll range shrinking and therefore a need to re-clamp the scroll offset.

Differential Revision: https://phabricator.services.mozilla.com/D34211